--- a/lib/task4/图表说明文档.md
+++ b/lib/task4/图表说明文档.md
@@ -369,7 +369,7 @@ investment targets and efficiency patterns.
 ### 组合3: 定性→定量
 ```
 图1 (分布) + 图3 (增长率) → 图5 (综合分析)
-从战略布局到效果评估
+从战略布局到效果评估..
 ```
 
 ---
